fix(Readme): correct bug when large example of code in readme overflow

--- a/src/components/Package/Readme.css
+++ b/src/components/Package/Readme.css
@@ -17,3 +17,8 @@
 .Readme-markdown__root {
   word-break: break-word;
 }
+/** Don't break words in code examples */
+.Readme-markdown__root pre {
+  word-break: normal;
+  overflow: scroll;
+}
